# disk-scheduling-mem-mgmt

./: .gitignore  CMakeLists.txt  disk.c  fcfs.c  look.c  main.c  page.c  scan.c  script.sh  sstf.c
Source/: disksch.c  disksch.h  firstscreen.h  frag.c  frag.h  main.c  pagerep.c  pagerep.h  pagerepFifo.c  pagerepFifo.h  rendertext.c  rendertext.h  texture.c
